--- a/apps/Didacti-coop_gui/didacticoop.qrc
+++ b/apps/Didacti-coop_gui/didacticoop.qrc
@@ -15,6 +15,7 @@
     <file>icons/home.png</file>
     <file>icons/lavagna.png</file>
     <file>icons/Logo.png</file>
+    <file>icons/PIN_loghi.png</file>
     <file>icons/mollaCompressione.png</file>
     <file>icons/mollaSingola.png</file>
     <file>icons/mollaTrazione.png</file>
