--- a/apps/Didacti-coop_gui/didacticoop.ui
+++ b/apps/Didacti-coop_gui/didacticoop.ui
@@ -152,7 +152,7 @@ QStackedWidget QWidget#Esperimento1 {
            <number>0</number>
           </property>
           <property name="currentIndex">
-           <number>2</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="lavagna">
            <property name="styleSheet">
@@ -760,7 +760,7 @@ QRadioButton::indicator:checked:pressed {
 }</string>
                  </property>
                  <property name="currentIndex">
-                  <number>8</number>
+                  <number>0</number>
                  </property>
                  <widget class="QWidget" name="page">
                   <property name="sizePolicy">
@@ -1202,6 +1202,9 @@ QDoubleSpinBox::down-arrow:off { /* off state when value in min */
                                  <property name="suffix">
                                   <string> mm</string>
                                  </property>
+                                 <property name="maximum">
+                                  <double>160.000000000000000</double>
+                                 </property>
                                  <property name="singleStep">
                                   <double>1.000000000000000</double>
                                  </property>
@@ -1219,7 +1222,7 @@ QDoubleSpinBox::down-arrow:off { /* off state when value in min */
                                   <number>1</number>
                                  </property>
                                  <property name="maximum">
-                                  <number>99</number>
+                                  <number>160</number>
                                  </property>
                                  <property name="pageStep">
                                   <number>10</number>
@@ -4885,7 +4888,7 @@ p, li { white-space: pre-wrap; }
                     </property>
                     <property name="maximumSize">
                      <size>
-                      <width>700</width>
+                      <width>900</width>
                       <height>600</height>
                      </size>
                     </property>
